docs/tests/typing/bad/testfile-assign-8.cpp

void foo() {}
int main() { int x; x = foo(); }

